hphp/hack/test/typecheck/noreturn_typehint_basic_bad2.php.exp
File "noreturn_typehint_basic_bad2.php", line 4, characters 10-11:
Invalid return type (Typing[4110])
File "noreturn_typehint_basic_bad2.php", line 3, characters 22-29:
Expected noreturn
File "noreturn_typehint_basic_bad2.php", line 4, characters 10-11:
But got int
