hphp/hack/test/typecheck/noreturn_typehint_basic_bad2.php
<?hh

function explicit(): noreturn {
  return 10;
}
